--- a/_posts/2024-08-22-minor-p4693a.md
+++ b/_posts/2024-08-22-minor-p4693a.md
@@ -3,7 +3,7 @@ layout: post
 title: minor-p4693a.pdf
 --- 
 
-Main points:
+Main points: General info for becoming an EA
 
 - An EA must pass a three-part Special Enrollment Examination (SEE) administered by the IRS showing
   - Proficiency in federal tax planning, individual and business tax return, preparation, representation, and ethics.
