moved 5279 to pages

--- a/_pages/2024-08-22-minor-p5279.md
+++ b/_pages/2024-08-22-minor-p5279.md
@@ -18,7 +18,7 @@ Your Pathway to Becoming an Enrolled Agent
 
 **www.prometric.com/see**
 
-- Prometric’s website includes an overview of examination topics, sample test questions, FAQs, & “What to Expect on Test Day" video, & “Take a Test Drive”
+- Prometric’s website includes an overview of examination topics, sample test questions, FAQs, & "What to Expect on Test Day" video, & "Take a Test Drive"
 
 
 <div class="pdf-container">
