--- a/_pages/2-pcir230.md
+++ b/_pages/2-pcir230.md
@@ -3,9 +3,9 @@ layout: post
 title: pcir230.pdf
 --- 
 
-**Treasury Department Circular No. 230**
-OR
-**Regulations Governing Practice before the Internal Revenue Service**
+**Treasury Department Circular No. 230**  
+OR  
+**Regulations Governing Practice before the Internal Revenue Service**  
 
 **Summary**
 
@@ -27,11 +27,11 @@ The Circular emphasizes the importance of ethics, competence, and responsibility
 
 #### 1. What is the primary purpose of Treasury Department Circular No. 230?
 
-**Answer:** The primary purpose of Treasury Department Circular No. 230 is to regulate the practice of attorneys, CPAs, enrolled agents, and other individuals before the IRS to ensure they meet ethical and professional standards in representing taxpayers.
+**Answer:** The primary purpose of Treasury Department Circular No. 230 is to regulate the practice of attorneys, CPAs, **enrolled agents**, and other individuals before the IRS to ensure they meet ethical and professional standards in representing taxpayers.
 
 #### 2. Who is eligible to practice before the IRS under Circular No. 230?
 
-**Answer:** Attorneys, CPAs, enrolled agents, enrolled retirement plan agents, and registered tax return preparers are eligible to practice before the IRS, provided they meet the requirements set forth in Circular No. 230 and are not currently under suspension or disbarment.
+**Answer:** Attorneys, CPAs, **enrolled agents**, enrolled retirement plan agents, and registered tax return preparers are eligible to practice before the IRS, provided they meet the requirements set forth in Circular No. 230 and are not currently under suspension or disbarment.
 
 #### 3. What are the possible sanctions for violating the rules in Circular No. 230?
 
