--- a/_posts/2024-08-22-minor-p4693a.md
+++ b/_posts/2024-08-22-minor-p4693a.md
@@ -12,8 +12,7 @@ Main points: General info for becoming an EA
 
 - Enrolled agents are required to renew their licenses to practice every three years.
   - Renewal is done online at www.pay.gov.
-  - Enrolled agents must have a valid PTIN,
-  - renewed annually, even if they do not prepare tax returns.
+  - Enrolled agents must have a valid **PTIN**, renewed annually, even if they do not prepare tax returns.
   - EAs must take 16 hours annually, two of which must be in ethics.
 
 <div class="pdf-container">
