--- a/_posts/2024-08-15-who-files.md
+++ b/_posts/2024-08-15-who-files.md
@@ -4,15 +4,13 @@ layout: post
 ---
 
 
-- You must file Form 1040 or 1040-SR and Schedule SE (Form 1040), Self-Employment Tax, if:
+**You must file Form 1040 or 1040-SR and Schedule SE (Form 1040), Self-Employment Tax, if:**
 
 1. Your net earnings from self-employment (excluding church employee income) were **$400 or more**, or
 
 2. You had church employee income of **$108.28 or more**. (See Table 1-3.)
 
 3. Use Schedule SE (Form 1040) to figure your self-employment tax. Self-employment tax is comparable to the social security and Medicare tax withheld from an employee's wages. For more information about this tax, see **Pub. 334**.
-
-
 
 - **Dependents NOTES**: p.8
 
