--- a/_pages/2-pcir230.md
+++ b/_pages/2-pcir230.md
@@ -44,3 +44,8 @@ The Circular emphasizes the importance of ethics, competence, and responsibility
 #### 5. What must a practitioner do if they become aware of a client's omission or error on a tax return?
 
 **Answer:** If a practitioner becomes aware of a client's omission or error on a tax return, they must promptly inform the client of the issue and advise them of the potential consequences. The practitioner must exercise due diligence in ensuring that the error is corrected.
+
+<div class="pdf-container">
+    <iframe src="/irs.ea/assets/general/pcir230.pdf#zoom=FitH" height="600" width="90%" allowFullScreen="true">
+    </iframe>
+</div>
