--- a/_pages/p334.chapter.02.md
+++ b/_pages/p334.chapter.02.md
@@ -5,19 +5,19 @@ title: p334.chapter.2.pdf
 
 # Chapter 2: Accounting Periods and Methods
 
-## Introduction
 - Discusses the selection and use of an accounting period and an accounting method for your business.
 
 ## Accounting Periods
+
 1. **Definition:** The time frame in which you calculate your taxable income.
 2. **Types of Accounting Periods:**
    - **Calendar Year:** January 1 through December 31.
    - **Fiscal Year:** 12 consecutive months ending on the last day of any month except December.
-3. **Changing Your Accounting Period:**
-   - Requires IRS approval through Form 1128, Application to Adopt, Change, or Retain a Tax Year.
-   - Some changes can be made without IRS approval if specific conditions are met.
+3. **Changing Your Accounting Period:** Some changes can be made without IRS approval;
+   1. Requires IRS approval via Form 1128, Application to Adopt, Change, or Retain a Tax Year.
 
 ## Accounting Methods
+
 1. **Definition:** A set of rules used to determine when and how to report income and expenses.
 2. **Types of Accounting Methods:**
    - **Cash Method:**
@@ -28,18 +28,20 @@ title: p334.chapter.2.pdf
      - Expenses are deducted in the year they are incurred, regardless of when they are paid.
    - **Special Methods:**
      - Combination of cash and accrual methods, with special rules applying to certain types of income and expenses.
-3. **Changing Your Accounting Method:**
-   - Requires filing Form 3115, Application for Change in Accounting Method.
-   - Automatic consent procedures are available for some changes, eliminating the need for IRS approval.
+3. **Changing Your Accounting Method:** Requires filing 
+   1. Form 3115, Application for Change in Accounting Method 
+   2. Automatic consent procedures are available for some changes, eliminating the need for IRS approval.
 
 ## Inventories
-1. **Requirement to Use:** If your business holds inventory, you generally must use an accrual method for purchases and sales.
+
+1. **Requirement to Use:** If your business holds inventory, you generally must use accrual accounting for purchases and sales.
 2. **Valuing Inventory:**
-   - **Cost Method:** Based on the cost of items in inventory.
+   - **Cost Method:** Based on the cost of items in inventory at time of purchase
    - **Lower of Cost or Market (LCM) Method:** Inventory is valued at the lower of its cost or market value.
    - **Retail Method:** Estimates the value of inventory by reducing the retail selling price by the mark-up percentage.
 
 ## Material Participation
+
 1. **Definition:** Involvement in the operation of your business to a degree that is regular, continuous, and substantial.
 2. **Passive Activity Rules:** If you do not materially participate, your business income may be classified as passive, subject to special rules and limitations.
 
