--- a/_pages/p334.chapter.06.md
+++ b/_pages/p334.chapter.06.md
@@ -5,14 +5,15 @@ title: p334.chapter.6.pdf
 
 # Chapter 6: Figuring Gross Profit
 
-## Introduction
-- Provides detailed instructions on how to calculate gross profit, which is essential for determining taxable business income.
+- Provides detailed instruction on calculating gross profit, which is essential for determining taxable business income.
 
 ## Gross Profit
+
 1. **Definition:** Gross profit is the amount left after subtracting the cost of goods sold (COGS) from total sales.
-2. **Formula:** Gross Profit = Net Sales - Cost of Goods Sold.
+$$Gross Profit = Net Sales - Cost of Goods Sold.$$
 
 ## Net Sales
+
 1. **Definition:** Total sales minus returns, allowances, and discounts.
 2. **Sales Returns and Allowances:**
    - **Sales Returns:** Products returned by customers.
@@ -21,6 +22,7 @@ title: p334.chapter.6.pdf
    - Cash discounts given to customers as an incentive for early payment.
 
 ## Cost of Goods Sold (COGS)
+
 1. **Components of COGS:**
    - **Beginning Inventory:** Value of inventory at the start of the year.
    - **Purchases:** Cost of goods bought during the year for resale.
@@ -32,11 +34,13 @@ title: p334.chapter.6.pdf
    - This calculation is critical for accurately determining gross profit.
 
 ## Gross Profit Margin
+
 1. **Definition:** The ratio of gross profit to net sales, expressed as a percentage.
 2. **Formula:** Gross Profit Margin = (Gross Profit / Net Sales) * 100.
 3. **Importance:** Used to assess the profitability of a business by indicating how much profit is generated from sales after accounting for COGS.
 
 ## Example of Figuring Gross Profit
+
 1. **Illustrative Example:** Provides a step-by-step calculation of gross profit, including adjustments for returns, allowances, and discounts.
 2. **Application:** Demonstrates how to apply the gross profit formula and calculate the gross profit margin.
 
