--- a/_pages/p334.chapter.01.md
+++ b/_pages/p334.chapter.01.md
@@ -5,39 +5,53 @@ title: p334.chapter.1.pdf
 
 # Chapter 1: Filing and Paying Business Taxes
 
-## Introduction
-- Overview of the business taxes you may have to pay and the forms required.
+- Overview of the business taxes and forms required.
 - Discusses taxpayer identification numbers (TINs).
 
 ## Identification Numbers
-1. **Social Security Number (SSN):** Generally used as the taxpayer identification number (TIN) for individuals.
+
+1. **Social Security Number (SSN):** is generally used as the taxpayer identification number (TIN) for individuals.
 2. **Individual Taxpayer Identification Number (ITIN):** Issued to nonresident and resident aliens who are not eligible to obtain an SSN.
 3. **Employer Identification Number (EIN):** Required if you have employees or file pension or excise tax returns.
 
 ## Income Tax
+
 1. **Requirement to File:** If net earnings from self-employment were $400 or more, or if other filing requirements are met.
-2. **Filing Forms:** Use Form 1040 or 1040-SR with Schedule C attached.
+2. **Filing Forms:** 1040 or 1040-SR with Schedule C attached.
 3. **Electronic Filing (IRS e-file):** Benefits include accuracy, security, and faster refunds.
 
-## Self-Employment (SE) Tax
+## Self-Employment Tax
+
 1. **Purpose:** Social security and Medicare tax for individuals who work for themselves.
 2. **Requirement to Pay:** Required if net earnings from self-employment are $400 or more.
 3. **Rate:** SE tax rate is 15.3%, with a portion deductible on Schedule 1 (Form 1040).
 
 ## Employment Taxes
+
 1. **Types:** Include social security, Medicare, federal income tax withholding, and federal unemployment tax (FUTA).
-2. **Forms to File:** Forms 941 or 944 for reporting.
+2. **Filing Forms:** 941 or 944 for reporting.
 
 ## Excise Taxes
+
 1. **Applicable Situations:** If you manufacture, sell certain products, operate certain businesses, or receive payment for specific services.
-2. **Forms:** Use Form 720, Quarterly Federal Excise Tax Return, or Form 2290, Heavy Highway Vehicle Use Tax Return.
+2. **Filing Forms:** 
+   1. 720, Quarterly Federal Excise Tax Return, or 
+   2. Form 2290, Heavy Highway Vehicle Use Tax Return.
 
 ## Information Returns
+
 1. **When Required:** If you make or receive payments in your business.
-2. **Forms to File:** Form 1099-MISC for miscellaneous payments, Form 1099-NEC for nonemployee compensation, and Form 8300 for cash payments over $10,000.
+2. **Filing Forms:** 
+   1. 1099-MISC for miscellaneous payments  
+   2. Form 1099-NEC for nonemployee compensation  
+   3. Form 8300 for cash payments over $10,000
 
 ## Going Out of Business Checklists
-1. **Final Forms to File:** Checklist of forms needed if going out of business, including Schedule C, Form 4797, Form 941, and others.
+
+1. **Filing Forms:**
+   1. include Schedule C  
+   2. Form 4797  
+   3. Form 941, and others  
 
 ---
 
