--- a/_pages/p334.chapter.04.md
+++ b/_pages/p334.chapter.04.md
@@ -5,15 +5,16 @@ title: p334.chapter.4.pdf
 
 # Chapter 4: Business Expenses
 
-## Introduction
-- Discusses various types of business expenses that can be deducted from gross income to determine taxable income.
+- Discusses various types of business deductions from gross income to determine taxable income.
 
 ## Business Expenses
+
 1. **Definition:** Ordinary and necessary costs of carrying on a trade or business.
 2. **Ordinary Expense:** Common and accepted in your trade or business.
 3. **Necessary Expense:** Helpful and appropriate for your business, though not necessarily indispensable.
 
 ## Cost of Goods Sold (COGS)
+
 1. **Definition:** Direct costs of producing the goods sold by your business.
 2. **Components of COGS:**
    - **Inventory Costs:** Cost of materials and supplies used in production.
@@ -21,19 +22,22 @@ title: p334.chapter.4.pdf
    - **Overhead:** Costs indirectly tied to production, such as utilities and rent.
 
 ## Capital Expenses
-1. **Definition:** Costs of purchasing assets that have a useful life beyond the tax year.
+
+1. **Definition:** Costs of purchasing assets that have a useful life beyond the tax year, or 1 year.
 2. **Types of Capital Expenses:**
    - **Business Start-Up Costs:** Expenses incurred before the business begins operation.
    - **Improvements:** Costs to increase the value or extend the life of business property.
    - **Assets:** Purchases such as buildings, machinery, and equipment.
 
 ## Personal versus Business Expenses
+
 1. **Mixed-Use Property:**
    - Expenses related to property used for both personal and business purposes must be divided based on the proportion of business use.
 2. **Non-Deductible Personal Expenses:**
    - Personal living or family expenses are not deductible as business expenses.
 
 ## Business Use of Your Home
+
 1. **Eligibility Requirements:**
    - Part of your home must be used regularly and exclusively for business.
 2. **Deductible Expenses:**
@@ -42,12 +46,15 @@ title: p334.chapter.4.pdf
    - Allows a standard deduction of $5 per square foot of business use, up to 300 square feet.
 
 ## Business Use of Your Car
+
 1. **Standard Mileage Rate:**
    - Deduct a fixed rate for each mile driven for business purposes.
+   - Miles x rate per mile
 2. **Actual Expense Method:**
    - Deduct the actual expenses of operating the vehicle, including gas, oil, insurance, repairs, and depreciation.
 
 ## Employee Pay
+
 1. **Wages and Salaries:**
    - Amounts paid for services performed by employees.
 2. **Bonuses and Commissions:**
@@ -56,18 +63,21 @@ title: p334.chapter.4.pdf
    - Costs for programs such as health insurance, retirement plans, and education assistance.
 
 ## Rent Expense
+
 1. **Deductible Rent:**
    - Rent paid for property you use in your trade or business.
 2. **Restrictions:**
    - Rent paid in advance must be deducted in the year to which it applies, not when paid.
 
 ## Interest
+
 1. **Types of Deductible Interest:**
    - Interest on loans used for business purposes, including mortgages and business loans.
 2. **Limitations:**
    - Interest related to personal expenses or for tax-exempt income is not deductible.
 
 ## Taxes
+
 1. **Deductible Taxes:**
    - State, local, and foreign taxes related to business operations.
    - Employment taxes, including social security and Medicare taxes, paid on behalf of employees.
@@ -75,6 +85,7 @@ title: p334.chapter.4.pdf
    - Federal income taxes and penalties are not deductible.
 
 ## Insurance
+
 1. **Deductible Insurance Premiums:**
    - Insurance that is ordinary and necessary for your business, including liability, malpractice, and workers' compensation insurance.
 2. **Life Insurance Premiums:**
