--- a/_pages/p334.chapter.01.md
+++ b/_pages/p334.chapter.01.md
@@ -8,6 +8,8 @@ title: p334.chapter.1.pdf
 - Overview of the business taxes and forms required.
 - Discusses taxpayer identification numbers (TINs).
 
+<img src="/irs.ea/assets/images/p334.table1-2.png" width="80%" />
+
 ## Identification Numbers
 
 1. **Social Security Number (SSN):** is generally used as the taxpayer identification number (TIN) for individuals.
