--- a/_pages/p334.chapter.04.md
+++ b/_pages/p334.chapter.04.md
@@ -49,7 +49,7 @@ title: p334.chapter.4.pdf
 
 1. **Standard Mileage Rate:**
    - Deduct a fixed rate for each mile driven for business purposes.
-   - Miles x rate per mile
+   - 65.5 cents a mile
 2. **Actual Expense Method:**
    - Deduct the actual expenses of operating the vehicle, including gas, oil, insurance, repairs, and depreciation.
 
