--- a/_pages/p334.chapter.07.md
+++ b/_pages/p334.chapter.07.md
@@ -5,21 +5,23 @@ title: p334.chapter.7.pdf
 
 # Chapter 7: Sales
 
-## Introduction
-- Discusses how to report sales income, including sales of goods and services, and the tax treatment of different types of sales.
+- How to report sales income, including sales of goods and services, and the tax treatment of different types of sales.
 
 ## Sales of Goods and Services
+
 1. **Reporting Sales:** Sales income must be reported on your tax return, typically on Schedule C for sole proprietors.
 2. **Types of Sales Income:**
    - **Sales of Goods:** Income from selling physical products.
    - **Sales of Services:** Income from providing services rather than physical products.
 
 ## Sales Returns and Allowances
+
 1. **Definition:** Reductions in sales revenue due to returned goods or allowances granted to customers.
 2. **Accounting for Returns:** Must be deducted from gross receipts to determine net sales.
 3. **Recording Sales Returns:** Ensure that returns and allowances are accurately recorded to reflect the true income of the business.
 
 ## Installment Sales
+
 1. **Definition:** Sales where payments are received in installments over time, rather than in a single payment.
 2. **Tax Treatment of Installment Sales:**
    - **Reporting Income:** Income is recognized as payments are received.
@@ -28,6 +30,7 @@ title: p334.chapter.7.pdf
 3. **Interest on Installment Sales:** Interest received on installment sales must be reported as ordinary income.
 
 ## Special Rules for Certain Sales
+
 1. **Related Party Sales:**
    - **Definition:** Sales made to related parties, such as family members or related businesses.
    - **Tax Treatment:** Special rules apply to prevent tax avoidance through related party sales.
@@ -37,11 +40,13 @@ title: p334.chapter.7.pdf
    - **Form to Use:** Report the sale and depreciation recapture on Form 4797, Sales of Business Property.
 
 ## Reporting Sales
+
 1. **Form 1040, Schedule C:** Report sales income, returns, and allowances on Schedule C.
 2. **Form 8949 and Schedule D:** Use these forms to report sales of capital assets.
 3. **Form 4797:** Report sales of business property and recapture of depreciation.
 
 ## Example of Sales Reporting
+
 1. **Illustrative Example:** Provides a detailed example of how to report sales income, including installment sales, related party sales, and sales of depreciable property.
 2. **Application:** Demonstrates the correct forms and calculations to use when reporting various types of sales.
 
