--- a/_pages/p334.chapter.02.md
+++ b/_pages/p334.chapter.02.md
@@ -7,6 +7,12 @@ title: p334.chapter.2.pdf
 
 - Discusses the selection and use of an accounting period and an accounting method for your business.
 
+- See: [Publication 538 Accounting Periods and Methods]()
+- <button onclick="buttonFunc()">IRS forms</button>
+<script>
+function buttonFunc() { window.open("https://www.irs.gov/forms-pubs"); }
+</script>
+
 ## Accounting Periods
 
 1. **Definition:** The time frame in which you calculate your taxable income.
