--- a/_pages/p334.chapter.03.md
+++ b/_pages/p334.chapter.03.md
@@ -5,7 +5,16 @@ title: p334.chapter.3.pdf
 
 # Chapter 3: Income
 
+- Gains/Losses & Income/Expenses
 - Provides guidance on what constitutes business income and how it should be reported.
+
+See Publications (for more detail)
+
+- 544 Sales and Other Dispositions of Assets
+- Form (and Instructions) 4797 Sales of Business Property
+- Sch D (Form 1040) Capital Gains and Losses
+- Casualties and thefts. Use Form 4684, 
+- Casualties and Thefts. You may also have to use Form 4797
 
 ## Gross Receipts
 
