--- a/_pages/p334.chapter.04.md
+++ b/_pages/p334.chapter.04.md
@@ -7,9 +7,11 @@ title: p334.chapter.4.pdf
 
 - Discusses various types of business deductions from gross income to determine taxable income.
 
+Form (and Instructions) - 3800 General Business Credit, 6251 Alternative Minimum Tax—Individuals
+
 ## Business Expenses
 
-1. **Definition:** Ordinary and necessary costs of carrying on a trade or business.
+1. **Definition:** **Ordinary and necessary costs** of carrying on a trade or business.
 2. **Ordinary Expense:** Common and accepted in your trade or business.
 3. **Necessary Expense:** Helpful and appropriate for your business, though not necessarily indispensable.
 
