--- a/_pages/3-pub17.better.md
+++ b/_pages/3-pub17.better.md
@@ -24,7 +24,7 @@ Part One of the IRS document provides essential guidance on filing a federal inc
 - Residents of Puerto Rico may need to file a U.S. tax return depending on income sources.
 - Filing requirements also apply to those with income from U.S. territories like Guam and American Samoa.
 
-### Quiz-Like Questions
+### Questions
 
 1. What three factors determine whether you must file a tax return?
 
@@ -55,7 +55,7 @@ Part One of the IRS document provides essential guidance on filing a federal inc
 
 - Required if certain forms or documents cannot be filed electronically.
 
-### Quiz-Like Questions
+### Questions
 
 1. What are the benefits of filing a tax return electronically?
 
@@ -83,7 +83,7 @@ Part One of the IRS document provides essential guidance on filing a federal inc
 
 - The Tax Counseling for the Elderly (TCE) program specializes in tax issues related to pensions and retirement.
 
-### Quiz-Like Questions
+### Questions
 
 1. Who is eligible for Free File services?
 - Taxpayers with AGI below a specific threshold set by the IRS.
@@ -108,7 +108,7 @@ Part One of the IRS document provides essential guidance on filing a federal inc
 
 - Certain delivery services are approved by the IRS for mailing tax returns, with guidelines provided for proof of mailing.
 
-### Quiz-Like Questions
+### Questions
 
 1. What is the standard due date for filing a 2023 tax return?
 
@@ -132,7 +132,7 @@ Part One of the IRS document provides essential guidance on filing a federal inc
 
 - If you overpay, you can choose to receive a refund or apply the overpayment to your next year’s taxes.
 
-### Quiz-Like Questions
+### Questions
 
 1. What are the consequences of underpaying your taxes?
 
@@ -156,7 +156,7 @@ Part One of the IRS document provides essential guidance on filing a federal inc
 
 - Typically, records should be kept for at least three years from the date the return was filed. Some situations may require longer retention.
 
-### Quiz-Like Questions
+### Questions
 
 1. Why is it important to keep tax records?
 
@@ -180,7 +180,7 @@ Part One of the IRS document provides essential guidance on filing a federal inc
 
 - Amended returns must generally be filed within three years from the date the original return was filed or within two years from the date the tax was paid, whichever is later.
 
-### Quiz-Like Questions
+### Questions
 
 1. What form is used to file an amended tax return?
 
