3-pub17 write ups

--- a/_pages/3-pub17.better.md
+++ b/_pages/3-pub17.better.md
@@ -8,13 +8,21 @@ layout: post
 
 ## Summary
 
-Part One of the IRS document provides essential guidance on filing a federal income tax return, including determining whether you need to file, how to file electronically or for free, and the steps to take if you owe taxes or are due a refund. It also covers recordkeeping, how to amend a return, and the implications of underpaying or overpaying taxes.
+Part One discusses:
+
+1. Whether you have to file a return.
+2. How to file electronically.
+3. How to file for free.
+4. When, how, and where to file your return.
+5. What happens if you pay too little or too much tax.
+6. What records you should keep and how long you should keep them.
+7. How you can change a return you have already filed.
 
 ## Subpart 1: Whether You Have to File a Return
 
 1. **Filing Requirements**
 
-- Factors determining whether you must file: gross income, filing status, and age.
+- Factors determining whether IF you must file: gross income, filing status, and age.
 - Special rules for specific groups: dependents, self-employed persons, and aliens.
 - Income thresholds are provided in tables (Table 1-1, Table 1-2, Table 1-3) for different filing statuses.
 
@@ -24,7 +32,7 @@ Part One of the IRS document provides essential guidance on filing a federal inc
 - Residents of Puerto Rico may need to file a U.S. tax return depending on income sources.
 - Filing requirements also apply to those with income from U.S. territories like Guam and American Samoa.
 
-### Questions
+### 3 Questions
 
 1. What three factors determine whether you must file a tax return?
 
@@ -48,14 +56,14 @@ Part One of the IRS document provides essential guidance on filing a federal inc
 
 2. **PIN Methods**
 
-- Self-Select PIN allows taxpayers to create their own five-digit PIN for electronic filing.
+- Self-Select PIN allows taxpayers to create their own five-digit PIN for filing.
 - Practitioner PIN involves authorizing a tax preparer to generate the PIN on behalf of the taxpayer.
 
 3. **Form 8453**
 
 - Required if certain forms or documents cannot be filed electronically.
 
-### Questions
+### 3 Questions
 
 1. What are the benefits of filing a tax return electronically?
 
@@ -79,19 +87,22 @@ Part One of the IRS document provides essential guidance on filing a federal inc
 
 2. **Volunteer Income Tax Assistance (VITA)**
 
-- Offers free tax help to low-income taxpayers, persons with disabilities, and those with limited English proficiency.
+- VITA offers free tax help to low-income taxpayers, persons with disabilities, and those with limited English proficiency.
 
 - The Tax Counseling for the Elderly (TCE) program specializes in tax issues related to pensions and retirement.
 
-### Questions
+### 3 Questions
 
 1. Who is eligible for Free File services?
+
 - Taxpayers with AGI below a specific threshold set by the IRS.
 
 2. What is the purpose of the Volunteer Income Tax Assistance (VITA) program?
+
 - To provide free tax help to eligible taxpayers, including those with low income and limited English proficiency.
 
 3. What type of tax issues does the Tax Counseling for the Elderly (TCE) program specialize in?
+
 - Pensions and retirement-related tax issues.
 
 ## Subpart 4: When, How, and Where to File Your Return
@@ -108,7 +119,7 @@ Part One of the IRS document provides essential guidance on filing a federal inc
 
 - Certain delivery services are approved by the IRS for mailing tax returns, with guidelines provided for proof of mailing.
 
-### Questions
+### 3 Questions
 
 1. What is the standard due date for filing a 2023 tax return?
 
@@ -132,7 +143,7 @@ Part One of the IRS document provides essential guidance on filing a federal inc
 
 - If you overpay, you can choose to receive a refund or apply the overpayment to your next year’s taxes.
 
-### Questions
+### 3 Questions
 
 1. What are the consequences of underpaying your taxes?
 
@@ -152,11 +163,11 @@ Part One of the IRS document provides essential guidance on filing a federal inc
 
 - Taxpayers should keep records that support income, deductions, and credits claimed on their tax returns.
 
-1. **Duration for Keeping Records**
+2. **Duration for Keeping Records**
 
 - Typically, records should be kept for at least three years from the date the return was filed. Some situations may require longer retention.
 
-### Questions
+### 3 Questions
 
 1. Why is it important to keep tax records?
 
@@ -180,7 +191,7 @@ Part One of the IRS document provides essential guidance on filing a federal inc
 
 - Amended returns must generally be filed within three years from the date the original return was filed or within two years from the date the tax was paid, whichever is later.
 
-### Questions
+### 3 Questions
 
 1. What form is used to file an amended tax return?
 
@@ -188,7 +199,7 @@ Part One of the IRS document provides essential guidance on filing a federal inc
 
 2. When should you file an amended return?
 
-- If you discover an error or omission after filing your original return.
+- When you discover an error or omission after filing your original return.
 
 3. What is the deadline for filing an amended return?
 
