--- a/_pages/3-pub17.md
+++ b/_pages/3-pub17.md
@@ -23,7 +23,7 @@ Part One of the IRS document provides a comprehensive overview of the basic info
    - Special provisions for individuals serving in a combat zone
    - ITIN renewal requirements and penalties for frivolous tax submissions
 
-### Quiz-Like Questions
+### 3 Questions
 
 1. What are the new lines added to Schedule 3 for the 2023 tax year?
 2. When is the due date for filing the 2023 tax return for residents of Maine or Massachusetts?
@@ -39,7 +39,7 @@ Part One of the IRS document provides a comprehensive overview of the basic info
    - Conditions under which filing a return is advantageous even if not required
    - Specific situations requiring a return, such as tax credits or refunds
 
-### Quiz-Like Questions
+### 3 Questions
 
 1. What factors determine whether an individual must file a tax return?
 2. What is considered gross income for filing purposes?
@@ -59,7 +59,7 @@ Part One of the IRS document provides a comprehensive overview of the basic info
    - Rules for an agent signing your return
    - State return filing with the federal return
 
-### Quiz-Like Questions
+### 3 Questions
 
 1. What is the advantage of filing a tax return electronically?
 2. How do you create a Self-Select PIN for electronic filing?
@@ -74,7 +74,7 @@ Part One of the IRS document provides a comprehensive overview of the basic info
    - Automatic extensions and how to apply for them
    - Extensions for individuals outside the U.S. and those serving in a combat zone
 
-### Quiz-Like Questions
+### 3 Questions
 
 1. When is the due date for filing a 2023 tax return for most taxpayers?
 2. What are the conditions for obtaining an automatic 6-month extension?
@@ -90,7 +90,7 @@ Part One of the IRS document provides a comprehensive overview of the basic info
 3. **Form W-2 and 1099**
    - Importance of these forms for reporting wages and other income
 
-### Quiz-Like Questions
+### 3 Questions
 
 1. What are the six steps for preparing a paper tax return?
 2. What should you do if you do not receive a Form W-2 by early February?
@@ -105,14 +105,13 @@ Part One of the IRS document provides a comprehensive overview of the basic info
    - Differences between the cash method and accrual method
    - Concepts of constructive receipt and payment to a third party
 
-### Quiz-Like Questions
+### 3 Questions
 
 1. What is the difference between a calendar year and a fiscal year?
 2. How does the cash method of accounting differ from the accrual method?
 3. What constitutes constructive receipt of income?
 
 ## Subpart 7: Social Security Number (SSN)
-
 
 1. **Requirements for SSN**
    - Need for SSNs for yourself and dependents
@@ -121,7 +120,7 @@ Part One of the IRS document provides a comprehensive overview of the basic info
    - Situations where an ITIN is needed instead of an SSN
    - Rules for applying for and using an ITIN
 
-### Quiz-Like Questions
+### 3 Questions
 
 1. What are the consequences of not providing a required SSN on your tax return?
 2. What is the process for obtaining an ITIN if you are ineligible for an SSN?
@@ -134,7 +133,7 @@ Part One of the IRS document provides a comprehensive overview of the basic info
 2. **Effect on Tax Return**
    - Assurance that checking the box does not change tax liability or refund
 
-### Quiz-Like Questions
+### 3 Questions
 
 1. What is the purpose of the Presidential Election Campaign Fund?
 2. How does contributing to the fund affect your tax return?
@@ -149,9 +148,8 @@ Part One of the IRS document provides a comprehensive overview of the basic info
 3. **Attachments**
    - Required attachments for paper returns, including W-2 and 1099 forms
 
-### Quiz-Like Questions
+### 3 Questions
 
 1. What is the rule for rounding off amounts on a tax return?
 2. How should negative amounts be reported on a paper return?
 3. What forms need to be attached to your paper tax return?
-
