--- a/_pages/3-pub17.better.md
+++ b/_pages/3-pub17.better.md
@@ -4,11 +4,9 @@ date: 2024-08-23
 layout: post
 ---
 
-# Part One: The Income Tax Return
+## Part One: The Income Tax Return
 
-## Summary
-
-Part One discusses:
+**Part One discusses**:
 
 1. Whether you have to file a return.
 2. How to file electronically.
@@ -18,21 +16,74 @@ Part One discusses:
 6. What records you should keep and how long you should keep them.
 7. How you can change a return you have already filed.
 
-## Subpart 1: Whether You Have to File a Return
+## Subpart 1: Do I Have to File a Return?
 
 1. **Filing Requirements**
 
-- Factors determining whether IF you must file: gross income, filing status, and age.
-- Special rules for specific groups: dependents, self-employed persons, and aliens.
+- Factors determining whether you must file: **gross income, filing status, and age**
+- See Table 1-1, Table 1-2, Table 1-3
+- Generally, > $25k file separately, > $32K filing jointly
+
+- Special rules: **dependents, self-employed persons, and aliens**
 - Income thresholds are provided in tables (Table 1-1, Table 1-2, Table 1-3) for different filing statuses.
 
-2. **Special Situations**
+
+1. Community property or domestic partners states
+
+- see Form 8958 and Pub. 555
+
+
 
 - U.S. citizens and resident aliens living abroad must include foreign income in gross income.
 - Residents of Puerto Rico may need to file a U.S. tax return depending on income sources.
 - Filing requirements also apply to those with income from U.S. territories like Guam and American Samoa.
+- Community property / domestic partner states; see Form 8958 and Pub. 555
+- Self-employed individuals; line 7 of Schedule C (Form 1040), Profit or Loss From Business; and line 9 of Schedule F (Form 1040)
+- Surviving Spouses, Executors, Administrators, and Legal Representatives; if you die in year your estate must file, see Pub. 559
+- U.S. Citizens and Resident Aliens Living Abroad; see Pub. 54
+- Residents of Puerto Rico; see Table 1-1 or Table 1-2, see Pub. 570.
 
-### 3 Questions
+### Dependents
+
+- Responsibility of parent; child must file for their income or parent maust file for them
+- Child's earnings; child earnings are not incorporated into gaurdian taxes.
+
+### Children Under Age 19 or Full-Time Students
+
+- If a child's only income is interest and dividends (including capital gain distributions and Alaska Permanent Fund dividends), the child was under age 19 at the end of 2023 or was a full-time student under age 24 at the end of 2023, and certain other conditions are met, a parent can elect to include the child's income on the parent's return.
+
+### Self-Employed Persons
+
+**Self-employment tax is comparable to the social security and Medicare tax**; see Pub. 334
+
+You are self-employed if you:
+- Carry on a trade or business as a sole proprietor,
+- Are an independent contractor,
+- Are a member of a partnership, or
+- Are in business for yourself in any other way.
+- >$400 income
+- >$108 church income
+
+- see table 1-1
+- see Schedule SE (Form 1040)
+
+
+### Employees of foreign governments or international organizations
+
+- If you are U.S. citizen who works for an international organization, a foreign government, and your employer isn't required to withhold social security and Medicare taxes, you must include your earnings from services performed in the U.S. for your net earnings
+
+- Ministers; must include income from services you performed as a minister when figuring your net earnings, see Pub. 517.
+
+
+### Aliens
+
+- alien status = resident, nonresident, or dual-status, see Pub. 519
+
+
+
+
+
+**Three Questions**
 
 1. What three factors determine whether you must file a tax return?
 
@@ -46,24 +97,94 @@ Part One discusses:
 
 - Whether they have income from U.S. sources and how it affects their gross income.
 
+
+## Who Should File
+
+1. IF you had federal income tax withheld or made estimated tax payments.
+2. IF you qualify for the earned income credit. See Pub. 596
+3. IF you qualify for the additional child tax credit. See chapter 14
+4. IF you qualify for the premium tax credit. See Pub. 974
+5. IF you qualify for the American opportunity credit. See Pub. 970
+6. IF you qualify for the credit for federal tax on fuels. See chapter 13
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 ## Subpart 2: How to File Electronically
+
+Free Ways To e-file: [](p17.table1-4.png)
+
+Table 1-2. 2023 Filing Requirements for Dependents
+
+
+### Requirements for an electronic return
 
 1. **Electronic Filing Overview**
 
-- Filing electronically is faster and more accurate than paper filing.
-- IRS e-file system automates the processing of tax returns, reducing manual errors.
-- Key steps include using a PIN or identity protection PIN (IP PIN) for electronic signature.
+- IRS.gov/efile or IRS.gov/FreeFile
+- Filing electronically is faster and more, reducing manual errors.
+
+Key steps include using a PIN or identity protection PIN (IP PIN) for electronic signature.
 
 2. **PIN Methods**
 
-- Self-Select PIN allows taxpayers to create their own five-digit PIN for filing.
-- Practitioner PIN involves authorizing a tax preparer to generate the PIN on behalf of the taxpayer.
+- Select a 5-digit PIN
+- A Practitioner PIN involves authorizing a tax preparer to generate the PIN on behalf of the taxpayer.
+- identity protection personal identification number (IP PIN) are six digits
 
-3. **Form 8453**
 
-- Required if certain forms or documents cannot be filed electronically.
+3. **Practitioner PIN**
 
-### 3 Questions
+- The Practitioner PIN method allows you to authorize your tax practitioner to
+enter or generate your PIN. 
+- Your electronic return is considered a valid, when it includes your **PIN; last name; date of birth; and IP PIN**
+
+### **Power of attorney**
+
+- If the agent is signing your a return then, a power of attorney (POA) must
+be filed, Attach the POA to Form 8453.
+
+4. **Form 8453**
+
+- If you need to send certain form that cannot be filed E-file then you must use Form 8453.
+
+5. **Refunds**
+
+- refunds can be mailed or direct deposit and split into <4 accounts
+- Inquiries; Go to IRS.gov/Refunds
+
+6. Free Help 
+
+- VITA. Go to IRS.gov/VITA, download the free IRS2Go app, or 800-906-9887
+- TCE. Go to IRS.gov/TCE, download the free IRS2Go app, or 888-227-7669
+
+7. **Using a Tax Professional**
+
+- Form 8879, IRS e-file Signature Authorization, to authorize the tax professional to enter your PIN on a return
+
+
+
+
+
+**3 Questions**
 
 1. What are the benefits of filing a tax return electronically?
 
@@ -91,7 +212,7 @@ Part One discusses:
 
 - The Tax Counseling for the Elderly (TCE) program specializes in tax issues related to pensions and retirement.
 
-### 3 Questions
+**3 Questions**
 
 1. Who is eligible for Free File services?
 
@@ -119,7 +240,7 @@ Part One discusses:
 
 - Certain delivery services are approved by the IRS for mailing tax returns, with guidelines provided for proof of mailing.
 
-### 3 Questions
+**3 Questions**
 
 1. What is the standard due date for filing a 2023 tax return?
 
@@ -143,7 +264,7 @@ Part One discusses:
 
 - If you overpay, you can choose to receive a refund or apply the overpayment to your next year’s taxes.
 
-### 3 Questions
+**3 Questions**
 
 1. What are the consequences of underpaying your taxes?
 
@@ -167,7 +288,7 @@ Part One discusses:
 
 - Typically, records should be kept for at least three years from the date the return was filed. Some situations may require longer retention.
 
-### 3 Questions
+**3 Questions**
 
 1. Why is it important to keep tax records?
 
@@ -191,7 +312,7 @@ Part One discusses:
 
 - Amended returns must generally be filed within three years from the date the original return was filed or within two years from the date the tax was paid, whichever is later.
 
-### 3 Questions
+**3 Questions**
 
 1. What form is used to file an amended tax return?
 
