3-pub17-Major Add'ns

--- a/_pages/3-pub17.md
+++ b/_pages/3-pub17.md
@@ -6,7 +6,7 @@ layout: post
 
 ## Part One: The Income Tax Return
 
-Part One of the IRS document provides a comprehensive overview of the basic information and steps required for filing a federal income tax return. It includes details about filing requirements, electronic filing, and various filing statuses. The section also covers topics such as recordkeeping, dependents, and penalties associated with incorrect filings.
+Part One of the IRS document provides a comprehensive view of the basic information and steps required for filing a federal income tax return. It includes details about filing requirements, electronic filing, and various filing statuses. The section also covers topics such as recordkeeping, dependents, and penalties associated with incorrect filings.
 
 ## Subpart 1: Filing Information
 
@@ -22,12 +22,22 @@ Part One of the IRS document provides a comprehensive overview of the basic info
    - Information on installment agreements and automatic 6-month extensions
    - Special provisions for individuals serving in a combat zone
    - ITIN renewal requirements and penalties for frivolous tax submissions
+   
+- See Table 1-1, Table 1-2, Table 1-3
 
-### 3 Questions
+### Questions
 
 1. What are the new lines added to Schedule 3 for the 2023 tax year?
 2. When is the due date for filing the 2023 tax return for residents of Maine or Massachusetts?
 3. What is the penalty for filing a frivolous tax return?
+
+1. What three factors determine whether you must file a tax return?
+   - Gross income, filing status, and age.
+2. Are U.S. citizens living abroad required to file a U.S. tax return?
+   - Yes, if their gross income exceeds the filing thresholds.
+3. What should residents of Puerto Rico consider when determining if they need to file a U.S. tax return?
+   - Whether they have income from U.S. sources and how it affects their gross income.
+
 
 ## Subpart 2: Do I Have To File a Return?
 
@@ -39,11 +49,18 @@ Part One of the IRS document provides a comprehensive overview of the basic info
    - Conditions under which filing a return is advantageous even if not required
    - Specific situations requiring a return, such as tax credits or refunds
 
-### 3 Questions
+### Questions
 
 1. What factors determine whether an individual must file a tax return?
 2. What is considered gross income for filing purposes?
 3. How do community property laws in certain states affect tax filing?
+1. What are the benefits of filing a tax return electronically?
+   - Faster processing, reduced errors, and immediate acknowledgment of receipt.
+2. What is the Self-Select PIN method?
+   - A method that allows taxpayers to create their own five-digit PIN to sign their electronic tax return.
+3. What is the purpose of Form 8453?
+   - To submit additional forms or documents that cannot be e-filed.
+
 
 ## Subpart 3: How To File Electronically
 
@@ -59,11 +76,17 @@ Part One of the IRS document provides a comprehensive overview of the basic info
    - Rules for an agent signing your return
    - State return filing with the federal return
 
-### 3 Questions
+### Questions
 
 1. What is the advantage of filing a tax return electronically?
 2. How do you create a Self-Select PIN for electronic filing?
 3. What should you do if the IRS issued you an Identity Protection PIN?
+1. Who is eligible for Free File services?
+   - Taxpayers with AGI below a specific threshold set by the IRS.
+2. What is the purpose of the Volunteer Income Tax Assistance (VITA) program?
+   - To provide free tax help to eligible taxpayers, including those with low income and limited English proficiency.
+3. What type of tax issues does the Tax Counseling for the Elderly (TCE) program specialize in?
+   - Pensions and retirement-related tax issues.
 
 ## Subpart 4: When Do I Have To File?
 
@@ -74,11 +97,17 @@ Part One of the IRS document provides a comprehensive overview of the basic info
    - Automatic extensions and how to apply for them
    - Extensions for individuals outside the U.S. and those serving in a combat zone
 
-### 3 Questions
+### Questions
 
 1. When is the due date for filing a 2023 tax return for most taxpayers?
 2. What are the conditions for obtaining an automatic 6-month extension?
 3. How does serving in a combat zone affect your tax filing deadline?
+1. What is the standard due date for filing a 2023 tax return?
+   - April 15, 2024.
+2. What happens if you use a private delivery service to mail your tax return?
+   - You must use an IRS-approved service, and you can obtain proof of mailing to meet the filing deadline.
+3. Can you obtain an extension to file your tax return, and how long is the extension?
+   - Yes, an automatic 6-month extension is available by filing Form 4868.
 
 ## Subpart 5: How Do I Prepare My Return?
 
@@ -90,11 +119,17 @@ Part One of the IRS document provides a comprehensive overview of the basic info
 3. **Form W-2 and 1099**
    - Importance of these forms for reporting wages and other income
 
-### 3 Questions
+### Questions
 
 1. What are the six steps for preparing a paper tax return?
 2. What should you do if you do not receive a Form W-2 by early February?
 3. What is the importance of Form 1099?
+1. What are the consequences of underpaying your taxes?
+   - You may be subject to penalties and interest.
+2. What options do you have if you overpay your taxes?
+   - You can receive a refund or apply the overpayment to next year’s taxes.
+3. How can you avoid penalties for underpayment?
+   - By ensuring proper withholding and making estimated tax payments as needed.
 
 ## Subpart 6: When Do I Report My Income and Expenses?
 
@@ -105,11 +140,17 @@ Part One of the IRS document provides a comprehensive overview of the basic info
    - Differences between the cash method and accrual method
    - Concepts of constructive receipt and payment to a third party
 
-### 3 Questions
+### Questions
 
 1. What is the difference between a calendar year and a fiscal year?
 2. How does the cash method of accounting differ from the accrual method?
 3. What constitutes constructive receipt of income?
+1. Why is it important to keep tax records?
+   - To support the income, deductions, and credits claimed on your tax return in case of an audit.
+2. How long should you generally keep your tax records?
+   - At least three years from the date the return was filed.
+3. Are there situations where you need to keep records longer than three years?
+   - Yes, certain situations, such as filing a claim for a loss, may require keeping records longer.
 
 ## Subpart 7: Social Security Number (SSN)
 
@@ -120,7 +161,7 @@ Part One of the IRS document provides a comprehensive overview of the basic info
    - Situations where an ITIN is needed instead of an SSN
    - Rules for applying for and using an ITIN
 
-### 3 Questions
+### Questions
 
 1. What are the consequences of not providing a required SSN on your tax return?
 2. What is the process for obtaining an ITIN if you are ineligible for an SSN?
@@ -133,7 +174,7 @@ Part One of the IRS document provides a comprehensive overview of the basic info
 2. **Effect on Tax Return**
    - Assurance that checking the box does not change tax liability or refund
 
-### 3 Questions
+### Questions
 
 1. What is the purpose of the Presidential Election Campaign Fund?
 2. How does contributing to the fund affect your tax return?
@@ -148,8 +189,14 @@ Part One of the IRS document provides a comprehensive overview of the basic info
 3. **Attachments**
    - Required attachments for paper returns, including W-2 and 1099 forms
 
-### 3 Questions
+### Questions
 
 1. What is the rule for rounding off amounts on a tax return?
 2. How should negative amounts be reported on a paper return?
 3. What forms need to be attached to your paper tax return?
+1. What form is used to file an amended tax return?
+   - Form 1040-X.
+2. When should you file an amended return?
+   - When you discover an error or omission after filing your original return.
+3. What is the deadline for filing an amended return?
+   - Within three years from the date the original return was filed or within two years from the date the tax was paid.
