--- a/_pages/3-pub17.md
+++ b/_pages/3-pub17.md
@@ -6,12 +6,11 @@ layout: post
 
 ## Part One: The Income Tax Return
 
-Part One of the IRS document provides a comprehensive view of the basic information and steps required for filing a federal income tax return. It includes details about filing requirements, electronic filing, and various filing statuses. The section also covers topics such as recordkeeping, dependents, and penalties associated with incorrect filings.
 
-## Subpart 1: Filing Information
+## Filing Information
 
 1. **What's New**
-   - Due date for filing (April 15, 2024)
+   - Due: April 15, 2024
    - Changes in Schedule 3 for reporting energy credits and vehicle credits
    - Increased income thresholds for mandatory filing
 2. **Reminders**
@@ -22,7 +21,7 @@ Part One of the IRS document provides a comprehensive view of the basic informat
    - Information on installment agreements and automatic 6-month extensions
    - Special provisions for individuals serving in a combat zone
    - ITIN renewal requirements and penalties for frivolous tax submissions
-   
+
 - See Table 1-1, Table 1-2, Table 1-3
 
 ### Questions
@@ -38,8 +37,7 @@ Part One of the IRS document provides a comprehensive view of the basic informat
 3. What should residents of Puerto Rico consider when determining if they need to file a U.S. tax return?
    - Whether they have income from U.S. sources and how it affects their gross income.
 
-
-## Subpart 2: Do I Have To File a Return?
+## 2: Do I Have To File a Return?
 
 1. **Individuals in General**
    - Filing requirements based on gross income, filing status, and age
@@ -61,8 +59,7 @@ Part One of the IRS document provides a comprehensive view of the basic informat
 3. What is the purpose of Form 8453?
    - To submit additional forms or documents that cannot be e-filed.
 
-
-## Subpart 3: How To File Electronically
+## 3: How To File Electronically
 
 1. **Electronic Filing Overview**
    - Benefits of e-filing, including speed and accuracy
@@ -88,7 +85,7 @@ Part One of the IRS document provides a comprehensive view of the basic informat
 3. What type of tax issues does the Tax Counseling for the Elderly (TCE) program specialize in?
    - Pensions and retirement-related tax issues.
 
-## Subpart 4: When Do I Have To File?
+## 4: When Do I Have To File?
 
 1. **Filing Deadlines**
    - Due dates for filing based on calendar or fiscal year
@@ -109,7 +106,7 @@ Part One of the IRS document provides a comprehensive view of the basic informat
 3. Can you obtain an extension to file your tax return, and how long is the extension?
    - Yes, an automatic 6-month extension is available by filing Form 4868.
 
-## Subpart 5: How Do I Prepare My Return?
+## 5: How Do I Prepare My Return?
 
 1. **Steps for Preparing**
    - Gathering records, forms, and schedules
@@ -131,7 +128,7 @@ Part One of the IRS document provides a comprehensive view of the basic informat
 3. How can you avoid penalties for underpayment?
    - By ensuring proper withholding and making estimated tax payments as needed.
 
-## Subpart 6: When Do I Report My Income and Expenses?
+## 6: When Do I Report My Income and Expenses?
 
 1. **Accounting Periods**
    - Explanation of calendar and fiscal years
@@ -152,7 +149,7 @@ Part One of the IRS document provides a comprehensive view of the basic informat
 3. Are there situations where you need to keep records longer than three years?
    - Yes, certain situations, such as filing a claim for a loss, may require keeping records longer.
 
-## Subpart 7: Social Security Number (SSN)
+## 7: Social Security Number (SSN)
 
 1. **Requirements for SSN**
    - Need for SSNs for yourself and dependents
@@ -167,7 +164,7 @@ Part One of the IRS document provides a comprehensive view of the basic informat
 2. What is the process for obtaining an ITIN if you are ineligible for an SSN?
 3. How does a name change affect your SSN and tax return filing?
 
-## Subpart 8: Presidential Election Campaign Fund
+## 8: Presidential Election Campaign Fund
 
 1. **Purpose**
    - Explanation of the fund's use in Presidential election campaigns and pediatric research
@@ -180,7 +177,7 @@ Part One of the IRS document provides a comprehensive view of the basic informat
 2. How does contributing to the fund affect your tax return?
 3. Can both spouses contribute to the fund on a joint return?
 
-## Subpart 9: Computations and Attachments
+## 9: Computations and Attachments
 
 1. **Rounding Off Dollars**
    - Rules for rounding amounts on the tax return
