--- a/_pages/3-pub17.better.md
+++ b/_pages/3-pub17.better.md
@@ -16,9 +16,16 @@ layout: post
 6. What records you should keep and how long you should keep them.
 7. How you can change a return you have already filed.
 
-## Subpart 1: Do I Have to File a Return?
+## 1: Do I Have to File a Return?
 
-1. **Filing Requirements**
+1. **Steps for Preparing**
+   - Gathering records, forms, and schedules
+   - Filling in, checking, and signing the return
+2. **Substitute Tax Forms**
+   - Use of substitute forms that meet IRS requirements
+3. **Form W-2 and 1099**
+   - Importance of these forms for reporting wages and other income
+
 
 - Factors determining whether you must file: **gross income, filing status, and age**
 - See Table 1-1, Table 1-2, Table 1-3
@@ -27,26 +34,21 @@ layout: post
 - Special rules: **dependents, self-employed persons, and aliens**
 - Income thresholds are provided in tables (Table 1-1, Table 1-2, Table 1-3) for different filing statuses.
 
-
-1. Community property or domestic partners states
-
-- see Form 8958 and Pub. 555
-
-
+- Community property / domestic partners states - see Form 8958 and Pub. 555
 
 - U.S. citizens and resident aliens living abroad must include foreign income in gross income.
 - Residents of Puerto Rico may need to file a U.S. tax return depending on income sources.
 - Filing requirements also apply to those with income from U.S. territories like Guam and American Samoa.
-- Community property / domestic partner states; see Form 8958 and Pub. 555
-- Self-employed individuals; line 7 of Schedule C (Form 1040), Profit or Loss From Business; and line 9 of Schedule F (Form 1040)
-- Surviving Spouses, Executors, Administrators, and Legal Representatives; if you die in year your estate must file, see Pub. 559
-- U.S. Citizens and Resident Aliens Living Abroad; see Pub. 54
-- Residents of Puerto Rico; see Table 1-1 or Table 1-2, see Pub. 570.
+- Self-employed individuals - line 7 of Schedule C (Form 1040), Profit or Loss From Business; and line 9 of Schedule F (Form 1040)
+- Surviving Spouses, Executors, Administrators, and Legal Representatives - if you die in year your estate must file, see Pub. 559
+- U.S. Citizens and Resident Aliens Living Abroad - see Pub. 54
+- Residents of Puerto Rico - see Table 1-1 or Table 1-2, & see Pub. 570.
+- Individuals With Income From U.S. Territories - Pub 17
 
 ### Dependents
 
-- Responsibility of parent; child must file for their income or parent maust file for them
-- Child's earnings; child earnings are not incorporated into gaurdian taxes.
+- Responsibility of parent - child must file for their income or parent must file for them
+- Child's earnings - child earnings are not incorporated into gaurdian taxes -  See Instructions for Form 8814
 
 ### Children Under Age 19 or Full-Time Students
 
@@ -54,10 +56,11 @@ layout: post
 
 ### Self-Employed Persons
 
-**Self-employment tax is comparable to the social security and Medicare tax**; see Pub. 334
+**Self-employment tax is comparable to the social security and Medicare tax** - see Pub. 334
 
 You are self-employed if you:
-- Carry on a trade or business as a sole proprietor,
+
+- Carry on a trade or business as a sole proprietor
 - Are an independent contractor,
 - Are a member of a partnership, or
 - Are in business for yourself in any other way.
@@ -68,20 +71,14 @@ You are self-employed if you:
 - see Schedule SE (Form 1040)
 
 
-### Employees of foreign governments or international organizations
+- Employees of foreign governments or international organizations
 
 - If you are U.S. citizen who works for an international organization, a foreign government, and your employer isn't required to withhold social security and Medicare taxes, you must include your earnings from services performed in the U.S. for your net earnings
 
-- Ministers; must include income from services you performed as a minister when figuring your net earnings, see Pub. 517.
+- Ministers - must include income from services you performed as a minister when figuring your net earnings, see Pub. 517.
 
 
-### Aliens
-
-- alien status = resident, nonresident, or dual-status, see Pub. 519
-
-
-
-
+- Alien status = resident, nonresident, or dual-status, see Pub. 519
 
 
 ## Who Should File
@@ -95,26 +92,7 @@ You are self-employed if you:
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-## Subpart 2: How to File Electronically
+## 2: How to File Electronically
 
 Free Ways To e-file: [](p17.table1-4.png)
 
@@ -155,7 +133,7 @@ be filed, Attach the POA to Form 8453.
 5. **Refunds**
 
 - refunds can be mailed or direct deposit and split into <4 accounts
-- Inquiries; Go to IRS.gov/Refunds
+- Inquiries - Go to IRS.gov/Refunds
 
 6. Free Help 
 
@@ -172,7 +150,7 @@ be filed, Attach the POA to Form 8453.
 
 **3 Questions**
 
-## Subpart 3: How to File for Free
+## 3: How to File for Free
 
 1. **Free Filing Options**
 
@@ -200,7 +178,7 @@ be filed, Attach the POA to Form 8453.
 
 - Pensions and retirement-related tax issues.
 
-## Subpart 4: When, How, and Where to File Your Return
+## 4: When, How, and Where to File Your Return
 
 1. **Filing Deadlines**
 
@@ -228,7 +206,7 @@ be filed, Attach the POA to Form 8453.
 
 - Yes, an automatic 6-month extension is available by filing Form 4868.
 
-## Subpart 5: What Happens if You Pay Too Little or Too Much Tax?
+## 5: What Happens if You Pay Too Little or Too Much Tax?
 
 1. **Underpayment of Tax**
 
@@ -252,7 +230,7 @@ be filed, Attach the POA to Form 8453.
 
 - By ensuring proper withholding and making estimated tax payments as needed.
 
-## Subpart 6: What Records Should You Keep, and How Long Should You Keep Them?
+## 6: What Records Should You Keep, and How Long Should You Keep Them?
 
 1. **Recordkeeping Requirements**
 
@@ -276,7 +254,7 @@ be filed, Attach the POA to Form 8453.
 
 - Yes, certain situations, such as filing a claim for a loss, may require keeping records longer.
 
-## Subpart 7: How Can You Change a Return You Have Already Filed?
+## 7: How Can You Change a Return You Have Already Filed?
 
 1. **Amended Returns**
 
