--- a/_pages/3-pub17.1-1.md
+++ b/_pages/3-pub17.1-1.md
@@ -34,6 +34,21 @@ layout: post
 - Special rules: **dependents, self-employed persons, and aliens**
 - Income thresholds are provided in tables (Table 1-1, Table 1-2, Table 1-3) for different filing statuses.
 
+- **Questions**
+
+1. What are the new lines added to Schedule 3 for the 2023 tax year?
+2. When is the due date for filing the 2023 tax return for residents of Maine or Massachusetts?
+3. What is the penalty for filing a frivolous tax return?
+
+1. What three factors determine whether you must file a tax return?
+   - Gross income, filing status, and age.
+2. Are U.S. citizens living abroad required to file a U.S. tax return?
+   - Yes, if their gross income exceeds the filing thresholds.
+3. What should residents of Puerto Rico consider when determining if they need to file a U.S. tax return?
+   - Whether they have income from U.S. sources and how it affects their gross income.
+
+
+
 - Community property / domestic partners states - see Form 8958 and Pub. 555
 
 - U.S. citizens and resident aliens living abroad must include foreign income in gross income.
@@ -80,8 +95,7 @@ You are self-employed if you:
 
 - Alien status = resident, nonresident, or dual-status, see Pub. 519
 
-
-## Who Should File
+- Who Should File
 
 1. IF you had federal income tax withheld or made estimated tax payments.
 2. IF you qualify for the earned income credit. See Pub. 596
@@ -90,6 +104,17 @@ You are self-employed if you:
 5. IF you qualify for the American opportunity credit. See Pub. 970
 6. IF you qualify for the credit for federal tax on fuels. See chapter 13
 
+- **Questions**
+
+1. What factors determine whether an individual must file a tax return?
+2. What is considered gross income for filing purposes?
+3. How do community property laws in certain states affect tax filing?
+1. What are the benefits of filing a tax return electronically?
+   - Faster processing, reduced errors, and immediate acknowledgment of receipt.
+2. What is the Self-Select PIN method?
+   - A method that allows taxpayers to create their own five-digit PIN to sign their electronic tax return.
+3. What is the purpose of Form 8453?
+   - To submit additional forms or documents that cannot be e-filed.
 
 
 ## 2: How to File Electronically
@@ -99,12 +124,11 @@ Free Ways To e-file: [](p17.table1-4.png)
 Table 1-2. 2023 Filing Requirements for Dependents
 
 
-### Requirements for an electronic return
+**Requirements for an electronic return**
 
 1. **Electronic Filing Overview**
 
-- IRS.gov/efile or IRS.gov/FreeFile
-- Filing electronically is faster and more, reducing manual errors.
+- IRS.gov/efile or IRS.gov/FreeFile - is faster and more, reducing manual errors.
 
 Key steps include using a PIN or identity protection PIN (IP PIN) for electronic signature.
 
@@ -121,27 +145,34 @@ Key steps include using a PIN or identity protection PIN (IP PIN) for electronic
 enter or generate your PIN. 
 - Your electronic return is considered a valid, when it includes your **PIN; last name; date of birth; and IP PIN**
 
-### **Power of attorney**
+- **Questions**
 
+1. What is the advantage of filing a tax return electronically?
+2. How do you create a Self-Select PIN for electronic filing?
+3. What should you do if the IRS issued you an Identity Protection PIN?
+1. Who is eligible for Free File services?
+   - Taxpayers with AGI below a specific threshold set by the IRS.
+2. What is the purpose of the Volunteer Income Tax Assistance (VITA) program?
+   - To provide free tax help to eligible taxpayers, including those with low income and limited English proficiency.
+3. What type of tax issues does the Tax Counseling for the Elderly (TCE) program specialize in?
+   - Pensions and retirement-related tax issues.
+
+- **Power of attorney**
 - If the agent is signing your a return then, a power of attorney (POA) must
 be filed, Attach the POA to Form 8453.
 
 4. **Form 8453**
-
 - If you need to send certain form that cannot be filed E-file then you must use Form 8453.
 
 5. **Refunds**
-
 - refunds can be mailed or direct deposit and split into <4 accounts
 - Inquiries - Go to IRS.gov/Refunds
 
 6. Free Help 
-
 - VITA. Go to IRS.gov/VITA, download the free IRS2Go app, or 800-906-9887
 - TCE. Go to IRS.gov/TCE, download the free IRS2Go app, or 888-227-7669
 
 7. **Using a Tax Professional**
-
 - Form 8879, IRS e-file Signature Authorization, to authorize the tax professional to enter your PIN on a return
 
 
@@ -194,17 +225,16 @@ be filed, Attach the POA to Form 8453.
 
 **3 Questions**
 
+
+1. When is the due date for filing a 2023 tax return for most taxpayers?
+2. What are the conditions for obtaining an automatic 6-month extension?
+3. How does serving in a combat zone affect your tax filing deadline?
 1. What is the standard due date for filing a 2023 tax return?
-
-- April 15, 2024.
-
+   - April 15, 2024.
 2. What happens if you use a private delivery service to mail your tax return?
-
-- You must use an IRS-approved service, and you can obtain proof of mailing to meet the filing deadline.
-
+   - You must use an IRS-approved service, and you can obtain proof of mailing to meet the filing deadline.
 3. Can you obtain an extension to file your tax return, and how long is the extension?
-
-- Yes, an automatic 6-month extension is available by filing Form 4868.
+   - Yes, an automatic 6-month extension is available by filing Form 4868.
 
 ## 5: What Happens if You Pay Too Little or Too Much Tax?
 
