--- a/_pages/3-pub17.part1-4.tax.wholding.est.tax.md
+++ b/_pages/3-pub17.part1-4.tax.wholding.est.tax.md
@@ -55,13 +55,11 @@ on:
 
 ## 5. Determining Amount of Tax Withheld Using Form W-4
 
-   - **FOLLOW: Form W-4**
-   - https://www.irs.gov/pub/irs-pdf/fw4.pdf?OWASP_CSRFTOKEN=5DVY-N1SM-ILPA-FK96-XIIS-IJRA-FFMU-ICIR
-   - Special Considerations
-     - New Jobs
-     - Pension Income
-   - Checking & Changing Your w/h
-   - Completing Form W-4 & Worksheets
+   - **FOLLOW: Form W-4 & Worksheets**
+   - [w4](https://www.irs.gov/pub/irs-pdf/fw4.pdf?OWASP_CSRFTOKEN=5DVY-N1SM-ILPA-FK96-XIIS-IJRA-FFMU-ICIR)
+   - New Jobs, Pension Income, Checking & Changing Your w/h - NEEDS W4
+   - **OK** for multiple worksheets for couples
+   - **OK** for deductions worksheet
 
 ## 6. Exemption From w/h
 
