mods and a color test

--- a/_pages/3-pub17.part1-4.tax.wholding.est.tax.md
+++ b/_pages/3-pub17.part1-4.tax.wholding.est.tax.md
@@ -60,6 +60,9 @@ on:
    - New Jobs, Pension Income, Checking & Changing Your w/h - NEEDS W4
    - **OK** for multiple worksheets for couples
    - **OK** for deductions worksheet
+   - **No Form W-4** If you don't give your employer a completed W-4, your employer must withhold at the highest rate, as if you were sin-
+gle.
+  
 
 ## 6. Exemption From w/h
 
