--- a/_pages/3-pub17.part1-4.tax.wholding.est.tax.md
+++ b/_pages/3-pub17.part1-4.tax.wholding.est.tax.md
@@ -4,7 +4,8 @@ date: 2024-08-24
 layout: post
 ---
 
-# Outline: Tax Withholding & Estimated Tax (2023)
+**Outline: Tax Withholding & Estimated Tax**
+
 
 ## 1. Introduction
 
@@ -13,14 +14,14 @@ w/h = with holding
 This section discusses income tax w/h
 on:
 
-- Salaries & wages,
-- Tips,
-- Taxable fringe benefits,
-- Sick pay,
-- Pensions & annuities,
-- Gambling winnings,
-- Unemployment compensation, &
-- Certain federal payments.
+1.  Salaries & wages,
+1.  Tips,
+1.  Taxable fringe benefits,
+1.  Sick pay,
+1.  Pensions & annuities,
+1.  Gambling winnings,
+1.  Unemployment compensation, &
+1.  Certain federal payments.
 
 - Methods to Pay Tax as You Earn Income
    - w/h
@@ -151,17 +152,17 @@ gle.
 
 ## 21. Additional Information & Forms
 
-   - **Publications & Forms Mentioned**
-     - **Pub. 505** - Tax w/h & Estimated Tax
-     - **Pub. 501** - Dependents, St&ard Deduction, & Filing Information
-     - **Pub. 531** - Reporting Tip Income
-     - **Pub. 225** - Farmer’s Tax Guide
-     - **Pub. 519** - U.S. Tax Guide for Aliens
-     - **Pub. 555** - Community Property
-     - **Pub. 966** - EFTPS (Electronic Federal Tax Payment System)
-     - **Pub. 5250** - Pay by Cash
-     - **Form W-4** - Employee’s w/h Certificate
-     - **Form W-4V** - Voluntary w/h Request
-     - **Form 1040-ES** - Estimated Tax for Individuals
-     - **Form 8822** - Change of Address
-     - **Form 2210** - Underpayment of Estimated Tax by Individuals, Estates, & Trusts
+**Publications & Forms Mentioned**
+   - **Pub. 505** - Tax w/h & Estimated Tax
+   - **Pub. 501** - Dependents, St&ard Deduction, & Filing Information
+   - **Pub. 531** - Reporting Tip Income
+   - **Pub. 225** - Farmer’s Tax Guide
+   - **Pub. 519** - U.S. Tax Guide for Aliens
+   - **Pub. 555** - Community Property
+   - **Pub. 966** - EFTPS (Electronic Federal Tax Payment System)
+   - **Pub. 5250** - Pay by Cash
+   - **Form W-4** - Employee’s w/h Certificate
+   - **Form W-4V** - Voluntary w/h Request
+   - **Form 1040-ES** - Estimated Tax for Individuals
+   - **Form 8822** - Change of Address
+   - **Form 2210** - Underpayment of Estimated Tax by Individuals, Estates, & Trusts
